[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "real-estate-listing-mcp"
version = "1.0.0"
description = "Real Estate Listing automation via MCP. Includes estimate valuation, generate listing, find comparable sales. By MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "real", "estate", "listing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/real-estate-listing-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
real_estate_listing_mcp = "server:main"
